k8s/config/arffornia/bluemap-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arffornia-bluemap-web
  labels:
    prod-gateway-access: "true"
